Redirect to portfolio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <body>
        <h1>Nick Mikstas GitHub Page</h1>
-       <p>Hello! I'm Nick! This is my GitHub Main page.</p>
+       <p>Redirecting to my portfolio...</p>
+       <a href="https://nmikstas.github.io/portfolio/">https://nmikstas.github.io/portfolio/</a>
+
+       <script src="./javascript.js"></script>
     </body>
 </html>
